<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="30dp"
     android:layout_marginRight="30dp"
     android:gravity="center_vertical"
     android:orientation="vertical">

  <Button
      android:id="@+id/connect"
      android:layout_width="match_parent"
      android:layout_height="70dp"
      android:layout_marginBottom="30dp"
      android:background="@drawable/button_selector"
      android:fontFamily="sans-serif-medium"
      android:paddingLeft="15dp"
      android:text="@string/connect"
      android:textAlignment="center"
      android:textColor="#fff"
      android:textSize="26sp" />
  <!--android:backgroundTint="@color/fui_linkColor"
  android:backgroundTint="#14d779"-->
  <TextView
      android:id="@+id/message"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/not_signal"
      android:textSize="18dp" />
  <Button
      android:id="@+id/call"
      android:layout_width="match_parent"
      android:layout_height="70dp"
      android:layout_marginBottom="30dp"
      android:background="@drawable/button_selector"
      android:fontFamily="sans-serif-medium"
      android:paddingLeft="15dp"
      android:text="@string/call"
      android:textColor="#fff"
      android:textSize="26sp" />
  <!--android:backgroundTint="@color/fui_bgPhone"-->
  <Button
      android:id="@+id/about_us"
      android:layout_width="match_parent"
      android:layout_height="70dp"
      android:layout_marginBottom="30dp"
      android:background="@drawable/button_selector"
      android:fontFamily="sans-serif-medium"
      android:paddingLeft="15dp"
      android:text="@string/about_us"
      android:textColor="#fff"
      android:textSize="26sp"/>
  <!--android:backgroundTint="@color/design_default_color_primary"-->

  <Button
      android:id="@+id/contact_us"
      android:layout_width="match_parent"
      android:layout_height="70dp"
      android:layout_marginBottom="30dp"
      android:background="@drawable/button_selector"
      android:fontFamily="sans-serif-medium"
      android:paddingLeft="15dp"
      android:text="@string/contact_us"
      android:textColor="#fff"
      android:textSize="26sp" />
  <Button
      android:id="@+id/notification"
      android:layout_width="match_parent"
      android:layout_height="70dp"
      android:layout_marginBottom="30dp"
       android:paddingLeft="15dp"
      android:textSize="26sp"
      android:alpha="0.1"/>

  <!--android:backgroundTint="@color/fui_bgTwitter"-->

 </LinearLayout>
</RelativeLayout>